Fixed image width overflow

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -49,6 +49,10 @@ header a{
   color: var(--text)
 }
 
+img{
+  max-width:100%;
+}
+
 #modeToggle{
   width: fit-content;
   padding:0.1rem;
